package org.example.fabricas;

import org.example.negator.Negacion;
import org.example.template.Programa;

public interface FabricaProgramas {
  Programa creaPrograma();
}
