package org.example.negator;

import org.example.template.Programa;

public interface Negacion {
    boolean negarResultado(Programa programa);
}
