package org.example.negator;

import org.example.template.Programa;

public class Negar implements Negacion {
    public boolean negarResultado(Programa programa) {
        if (true) {
            return false;
        } else {
            return true;
        }
    }
}
