package org.example.observer;

public interface Observador {
    void actualizar(boolean bucleInfinito);
}
